# babbagecoin

./: .env.dist  .gitignore  Dockerfile  MARTIAL.pkey  MARTIAL.skey  README.md  app.py  bbc.sh  docker-compose.yml  makefile  public.key.MARTIAL  pyproject.toml  request.py  requirements.manual.txt  worker.py
.github/workflows/: python-app.yml  python-publish.yml
babbagecoin/: __main__.py
babbagecoin/client/: __main__.py  client.py
babbagecoin/common/: balance.py  block_service.py  context.py  exceptions.py  models.py  schemas.py  wallet.py
babbagecoin/master/: blockchain_service.py  broadcast_service.py  routes.py  transaction_service.py
babbagecoin/master/static/: index.html
babbagecoin/miner/: miner.py
client/: README.md  package-lock.json  package.json
client/src/: App.vue  style.css
client/src/components/: Content.vue  Menu.vue
docker/: docker-compose-2.yml  docker-compose-4.yml  docker-compose.yml
docs/: index.md
known_nodes/: MARTIAL.pkey  MARTIAL.txt  MARTIAL_FIXE.txt  YOHANN.txt  public.key.MARTIAL  public.key.QUENTIN
nodes/: docker-compose-multi.yml  docker-compose.yml
pub_keys/: ARCH.txt  JULIEN.txt  MARTIAL.txt  QUENTIN.txt  YOHANN.txt
src/: app.py  config.py
src/client/: client.py
src/common/: balances.py  block_service.py  context.py  env.py  exceptions.py  hash_service.py  ips.py  models.py  request.py  schemas.py  wallet.py
src/frontend/: app.py
src/master/: blockchain_service.py  broadcast_service.py  db.py  routes.py  transaction_service.py
src/miner/: miner.py
src/tests/: conftest.py
src/tests/client/: test_client.py
src/tests/factory/: models.py
src/tests/master/: test_broadcast.py  test_db.py  test_routes.py
src/tests/miner/: test_miner.py
src/worker/: worker.py
tests/: conftest.py
tests/client/: test_client.py
tests/factory/: models.py
tests/fixtures/private_keys/: USER1.txt  USER2.txt  USER3.txt
tests/helpers/: models.py  users.py
tests/master/: test_blockchain_service.py  test_broadcast.py  test_routes.py
tests/miner/: test_miner.py
vue/: package-lock.json  package.json
vue/src/components/: Menu.vue
webclient/: .env  .env.production  index.html  package-lock.json  package.json  vite.config.js
webclient/src/: App.vue  main.js  style.css
webclient/src/components/: Content.vue  Explorer.vue  Menu.vue  (+1 more)
(+16 files in other folders)
