[tool.poetry]
name = "babbagecoin"
version = "0.1.0"
description = "Second edition of project Babbage, create a blockchain from scratch (in a weekend)"
authors = ["Quentin Garchery <garchery.quentin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.3"
requests = "^2.27.1"
marshmallow = "^3.14.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
